--- a/src/blocks/block-grid-container/styles/editor.scss
+++ b/src/blocks/block-grid-container/styles/editor.scss
@@ -459,6 +459,7 @@
 	body:not(.folded) .is-sidebar-opened .editor-styles-wrapper .wp-block[data-type="c9-blocks/grid"] .c9-grid>.block-editor-inner-blocks>.block-editor-block-list__layout,
 	body.folded .is-sidebar-opened .editor-styles-wrapper .wp-block[data-type="c9-blocks/grid"] .c9-grid>.block-editor-inner-blocks>.block-editor-block-list__layout {
 		min-width: 100%;
+		width: 100%;
 	}
 
 	body:not(.folded) .edit-post-layout:not(.is-sidebar-opened) .editor-styles-wrapper .wp-block[data-type="c9-blocks/grid"] .container,
@@ -597,10 +598,13 @@
 	}
 
 	// Admin closed. Inspector open.
+	body:not(.folded) .is-sidebar-opened .editor-styles-wrapper .wp-block[data-type="c9-blocks/grid"] .container-fluid[data-align="full"],
 	body.folded .is-sidebar-opened .editor-styles-wrapper .wp-block[data-type="c9-blocks/grid"] .container-fluid[data-align="full"] {
-		max-width: none;
-		width: calc(100vw - 280px - 7%);
+		max-width: 100vw;
 		min-width: 1200px;
+		width: calc((100vw * .96) - 280px - 18px);
+		margin-left: calc((-100vw + 100% + 116px + 280px - 28px) / 2);
+		margin-right: calc((-100vw + 100% + 116px + 280px - 28px) / 2);
 	}
 
 	// Admin open. Inspector closed.
